--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <p>I am a flexible and experienced insurance administrator with excellent time management skills</p>
           <p>I am a good communicator with proven inter personal skills and am used to working in a team whilst also being capable of using own initiative</p>
           <p>I am skilled In dealing with problems in a resourceful manner and negotiating to achieve beneficial agreement. I am always enthusiastic to learn and undertake new challenges.</p>
-          <a href="resume.doc" class="btn btn-primary btn-lg page-scroll">My Portfolio</a> </div>
+          <a href="resume.docx" class="btn btn-primary btn-lg page-scroll">My Portfolio</a> </div>
       </div>
     </div>
   </div>
@@ -119,7 +119,7 @@
         <h4>C++</h4>
       </div>
        <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="50"> <span class="percent">80</span> </span>
-        <h4>JQUERY</h4>
+        <h4>Django</h4>
       </div>
     </div>
   </div>
@@ -259,30 +259,7 @@
         <h2>Get In Touch</h2>
         <hr>
       </div>
-      <!--<div class="col-md-8 col-md-offset-2">
-        <form name="sentMessage" id="contactForm" novalidate>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" id="name" class="form-control" placeholder="Name" required="required">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-            <p class="help-block text-danger"></p>
-          </div>
-          <div id="success"></div>
-          <button type="submit" class="btn btn-default">Send Message</button>
-        </form>
-    -->
+     
 
     <div>
       <p style="font-size: 25px">
