--- a/index.html
+++ b/index.html
@@ -100,25 +100,25 @@
       <hr>
     </div>
     <div class="row">
-      <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="75"> <span class="percent">95</span> </span>
+      <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="75"> <span class="percent"></span> </span>
         <h4>JAVA</h4>
       </div>
-      <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="65"> <span class="percent">85</span> </span>
+      <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="65"> <span class="percent"></span> </span>
         <h4>C#.NET</h4>
       </div>
-      <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="60"> <span class="percent">80</span> </span>
+      <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="60"> <span class="percent"></span> </span>
         <h4>PYTHON</h4>
       </div>
-      <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="80"> <span class="percent">80</span> </span>
+      <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="80"> <span class="percent"></span> </span>
         <h4>HTML</h4>
       </div>
-      <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="80"> <span class="percent">80</span> </span>
+      <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="80"> <span class="percent"></span> </span>
         <h4>CSS</h4>
       </div>
-       <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="90"> <span class="percent">80</span> </span>
+       <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="90"> <span class="percent"></span> </span>
         <h4>C++</h4>
       </div>
-       <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="50"> <span class="percent">80</span> </span>
+       <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="50"> <span class="percent"></span> </span>
         <h4>Django</h4>
       </div>
     </div>
