--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Laura Bootstrap Theme</title>
+  <title>💻👨‍🎓Machine learning Enthusiast!!</title>
   <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
   <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
@@ -59,8 +59,8 @@
     .nav{
       position: relative;
       align-items: center;
-      padding-left: 400px;
       margin-top: 50px;
+      margin-left: 400px;
     }
 </style>
 <body>
@@ -78,9 +78,7 @@
     <a href="contact.html" class="inner color4">Contact       </a>
   </div>
 </div>
-&nbsp;
-&nbsp;
-&nbsp;
+
   <section id="about" class="section-padding wow fadeIn delay-05s">
     <div class="container">
       <div class="row">
@@ -100,8 +98,10 @@
               WORK EXPERIENCE:
 Intern
 Knowurture
-05/2018 – 07/2018 Bengaluru
+05/2018 – 07/2018 Bengaluru  
+&nbsp;
 Knowurture believe and strive to create a better world where suffering caused by ill health is reduced by access to information and Knowledge of the expert
+&nbsp;
 Tasks:
 Developed a patient history collection tool using Django, PostgreSQL, html and CSS.
 </p>
