--- a/work.html
+++ b/work.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="../assets/style.css"> -->
-  <link rel="stylesheet" href="./work.css">
+<!--   <link rel="stylesheet" href="../assets/style.css">
+ -->  <link rel="stylesheet" href="./work.css">
 
   <title>💻👨‍🎓Machine learning Enthusiast!!</title>
 </head>
@@ -133,7 +133,7 @@
         <p>(python,bottle)A web app to make groups provided number of people in each group.</p>
       </div>
  </section>
-</div> -->
+</div>
 
 
 </body>
