--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
     <a href="index.html" class="inner color1">Home         </a>
   </div>
   <div class="outer"> 
-    <a href="#" class="inner color2">About Me        </a>
+    <a href="about.html" class="inner color2">About Me        </a>
   </div>
   <div class="outer"> 
     <a href="work.html" class="inner color3">Work          </a>
