fixed about page

--- a/about.html
+++ b/about.html
@@ -96,11 +96,13 @@
             <p>&nbsp;</p>
             <p style="color:#0077B5;font-size: 16px;">
               WORK EXPERIENCE:
-Intern
+Intern<br>
 Knowurture
 05/2018 – 07/2018 Bengaluru  
+<br>
 &nbsp;
 Knowurture believe and strive to create a better world where suffering caused by ill health is reduced by access to information and Knowledge of the expert
+<br>
 &nbsp;
 Tasks:
 Developed a patient history collection tool using Django, PostgreSQL, html and CSS.
