--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- <link rel="icon" type="image/png" href="about.jpg"> -->
     <title>💻👨‍🎓Machine learning Enthusiast!!</title>
     <link rel="stylesheet" href="style.css">
   </head>
