--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 <div class="main" id="section1">
 <div class="container">
-  <span class="text1">Achyuth Koneri</span>
+  <span class="text1">Achyuth Koneri Venkatesh</span>
   <span class="text2">Coder and Photographer</span>
 </div>
 </div>
